--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -104,7 +104,8 @@
   isbn={0387902791},
   series={Universitext},
   year={1945},
-  publisher={Springer}
+  publisher={Springer},
+}
 
 @article{sutherland,
   title={Torsion subgroups of elliptic curves over number fields},
