small typo corrections

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -207,7 +207,7 @@ has torsion submodule equal to $\ZZ/2\ZZ$ and is of rank 1.
 
 \section{Algebraic number theory}
 
-Algebraic number began with the study of algebraic numbers and their uses in solving diophantine equations but has since expanded to encompass a huge amount of mathematics involving the use of algebraic techniques to tackle number theoretic problems. %TODO ????
+Algebraic number began with the study of algebraic numbers and their uses in solving Diophantine equations but has since expanded to encompass a huge amount of mathematics involving the use of algebraic techniques to tackle number theoretic problems. %TODO ????
 As above, more details about anything not proved here can be found in any of the many texts on algebraic number theory, for example \cite{neukirch}, \cite{lang}.
 
 \begin{defn}[Number field]
@@ -261,7 +261,7 @@ We can use the notion of index in a variety of situations here, such as consider
 \section{Elliptic curves}
 We now introduce the background material relevant to elliptic curves, one of the intended applications of these methods.
 This is not required for the main problem discussed in chapter~\ref{chap:prob}, but section~\ref{sec:ell} uses these ideas heavily.
-As with the above sections everything here can be found in textbooks on elliptic curves (such as \cite{knapp}), we just move quickly to the parts relevent to us in this section.
+As with the above sections everything here can be found in textbooks on elliptic curves (such as \cite{knapp}), we just move quickly to the parts relevant to us in this section.
 %TODO more refs
 
 Given an elliptic curve $E$ and a field $K$ we let $E(K)$ be the set of points in $K^2$ satisfying the equation defining $E$, along with an extra point $\infty$.
