added sage and magma to biblio, other small changes to style

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -110,10 +110,10 @@ All rings here are commutative with an identity element.
 \begin{defn}[Module]
 Given a ring $R$ we define an \emph{$R$-module} $M$ to be an abelian group under addition, with a scalar multiplication map $\cdot \colon R\times M \to M$ satisfying
 \begin{align*}
-1\cdot m &= m \; &&\forall m\in M \\
-r_1\cdot(r_2 \cdot m) &= (r_1r_2)\cdot m \; &&\forall r_1,r_2\in R,\; m\in M \\
-r\cdot(m_1 + m_2) &= r\cdot m_1 + r\cdot m_2 \; &&\forall r\in R, \; m_1,m_2\in M \\
-(r_1 + r_2)\cdot m &= r_1\cdot m + r_2\cdot m \; &&\forall r_1,r_2\in R, \; m_1\in M
+1\cdot m &= m \; &&\text{for all } m\in M \\
+r_1\cdot(r_2 \cdot m) &= (r_1r_2)\cdot m \; &&\text{for all } r_1,r_2\in R,\; m\in M \\
+r\cdot(m_1 + m_2) &= r\cdot m_1 + r\cdot m_2 \; &&\text{for all } r\in R, \; m_1,m_2\in M \\
+(r_1 + r_2)\cdot m &= r_1\cdot m + r_2\cdot m \; &&\text{for all } r_1,r_2\in R, \; m_1\in M
 \end{align*}
 \end{defn}
 
@@ -295,7 +295,7 @@ We can use the notion of index in a variety of situations here, such as consider
 \begin{ex}
 As we will see later the maximal order of a quadratic number field is easy to determine.
 For example in figure~\ref{fig:sageord} one embedding into the complex plane of the ring of integers of $\QQ[x]/(x^2 + 19)\cong \QQ(\sqrt{-19})$ is shown.
-Highlighted in black is a suborder of index 3 in this order.
+Highlighted in bold is a suborder of index 3 in this order.
 \begin{figure}
 \centering
 \includegraphics[scale=0.6]{sageord}
@@ -642,7 +642,7 @@ Given an elliptic curve defined over the rationals in long Weierstrass form, for
 we can find an isomorphic curve $E \colon y^2 = x^3 + a_2'x^2 + a_4'x + a_6'$, such a curve is said to be in \emph{short Weierstrass form}.
 
 Given such a curve we can define a number field to help us study the torsion points of $E$.
-\begin{defn}[$p$-division field]
+\begin{defn}[$p$-division field] %TODO find ref for this
 For a prime $p$ the $p$-division field of $E$, denoted $\QQ(E[p])$ is obtained by taking all points $(x,y) \in E(\QQ)[p]\setminus 0\subset \QQ^2$ and adjoining the collection of each of their coordinates $x$ and $y$ to $\QQ$.
 \end{defn}
 As the torsion subgroup $E(\QQ)_\text{tors}$ is always finite there are at most finitely many elements that need adjoining to $\QQ$, so this field is fairly nice.
