--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -50,10 +50,11 @@
 }
 
 @phdthesis{brakenhoff,
-  author={Brakenhoff, J.},
-  title={Counting problems for number rings},
-  year={2009},
-  school={Universiteit Leiden}
+  author = {Brakenhoff, J.},
+  title  = {Counting problems for number rings},
+  year   = {2009},
+  school = {Universiteit Leiden},
+  note   = {\url{https://www.math.leidenuniv.nl/scripties/proefschrift-brakenhoff.pdf}},
 }
 
 @book{am,
@@ -88,30 +89,55 @@
 }
 
 @book{knapp,
-  title={Elliptic Curves},
-  author={Knapp, A. W.},
-  isbn={9780691085593},
-  lccn={lc92022183},
-  series={Mathematical Notes - Princeton University Press},
-  url={http://books.google.co.uk/books?id=-e\_qVoKF8H8C},
-  year={1992},
-  publisher={Princeton University Press}
+  title     = {Elliptic Curves},
+  author    = {Knapp, A. W.},
+  isbn      = {9780691085593},
+  lccn      = {lc92022183},
+  series    = {Mathematical Notes - Princeton University Press},
+  url       = {http://books.google.co.uk/books?id=-e\_qVoKF8H8C},
+  year      = {1992},
+  publisher = {Princeton University Press}
 }
 
 @book{marcus,
-  title={Number Fields},
-  author={Marcus, D. A.},
-  isbn={0387902791},
-  series={Universitext},
-  year={1945},
-  publisher={Springer},
+  title     = {Number Fields},
+  author    = {Marcus, D. A.},
+  isbn      = {0387902791},
+  series    = {Universitext},
+  year      = {1945},
+  publisher = {Springer},
 }
 
 @article{sutherland,
-  title={Torsion subgroups of elliptic curves over number fields},
-  author={Sutherland, A. V.},
-  url={http://math.mit.edu/~drew/MazursTheoremSubsequentResults.pdf},
-  howpublished={\url{http://math.mit.edu/~drew/MazursTheoremSubsequentResults.pdf}},
-  year={2012},
+  title  = {Torsion subgroups of elliptic curves over number fields},
+  author = {Sutherland, A. V.},
+  url    = {http://math.mit.edu/~drew/MazursTheoremSubsequentResults.pdf},
+  note   = {\url{http://math.mit.edu/~drew/MazursTheoremSubsequentResults.pdf}},
+  year   = {2012},
 }
 
+@manual{sage,
+  Key          = {Sage},
+  Author       = {W.\thinspace{}A. Stein and others},
+  Organization = {The Sage Development Team},
+  Title        = {{S}age {M}athematics {S}oftware ({V}ersion 6.1.1)},
+  note         = {\url{http://www.sagemath.org}},
+  Year         = {2014},
+}
+
+@article{MR1484478,
+    AUTHOR = {Bosma, Wieb and Cannon, John and Playoust, Catherine},
+     TITLE = {The {M}agma algebra system. {I}. {T}he user language},
+      NOTE = {Computational algebra and number theory (London, 1993)},
+   JOURNAL = {J. Symbolic Comput.},
+  FJOURNAL = {Journal of Symbolic Computation},
+    VOLUME = {24},
+      YEAR = {1997},
+    NUMBER = {3-4},
+     PAGES = {235--265},
+      ISSN = {0747-7171},
+   MRCLASS = {68Q40},
+  MRNUMBER = {MR1484478},
+       DOI = {10.1006/jsco.1996.0125},
+       URL = {http://dx.doi.org/10.1006/jsco.1996.0125},
+}
